z-index fix

--- a/style.css
+++ b/style.css
@@ -97,4 +97,5 @@ section {
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+  z-index: -1;
 }
